Fixed technologies spacing on smaller devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1010,6 +1010,10 @@
         width: 100%;
         height: unset;
     }
+    .technologies {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 }
 @media (max-width: 600px) {
     .project-cards {
